--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
 }
 .container{
     background-color: #353F5B;
+    height: 100vh;
+    border-radius: 1rem;
+    display:flex;
+    flex-direction:column;
 }
 /* submit button styling  */
 .btn {
@@ -116,3 +120,78 @@ section{
     border: none;
     cursor: pointer;
 }
+/* edit button styling  */
+.edit-btn {
+  position: relative;
+  font-size: 13px;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1em 2.5em;
+  display: inline-block;
+  border-radius: 6em;
+  transition: all .2s;
+  border: none;
+  font-family: inherit;
+  font-weight: 600;
+  color: black;
+  background-color: #8179c7;
+ }
+ 
+ .edit-btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+ }
+ 
+ .edit-btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+ }
+ 
+ .edit-btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+ }
+ 
+ .edit-btn::after {
+  background-color: #fff;
+ }
+ 
+ .edit-btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+ }
+
+
+
+
+
+  /* delete button styling  */
+  .delete {
+    background: #FBCA1F;
+    font-family: inherit;
+    padding: 0.6em 1.3em;
+    font-weight: 900;
+    font-size: 18px;
+    border: 3px solid #8179c7;
+    border-radius: 0.4em;
+    box-shadow: 0.1em 0.1em;
+    color: #000000;
+  }
+  
+  .delete:hover {
+    transform: translate(-0.05em, -0.05em);
+    box-shadow: 0.15em 0.15em;
+  }
+  
+  .delete:active {
+    transform: translate(0.05em, 0.05em);
+    box-shadow: 0.05em 0.05em;
+  }
