--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ h1{
     border: none;
     justify-content: space-between;
 }
-.task-form{
+.form{
     padding: 1rem;
     border-radius: 1rem;
     width: 20rem;
