--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ section{
   text-transform: uppercase;
   text-decoration: none;
   padding: 1em 2.5em;
+  margin: 5px;
   display: inline-block;
   border-radius: 6em;
   transition: all .2s;
